// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform Okta Verify Device Challenge Poll Tests where remediation is challenge-poll should transform elements when challengeMethod is APP_LINK 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "appLink.title",
        },
        "type": "Title",
      },
      {
        "type": "Spinner",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "appLink.content",
        },
        "type": "Description",
      },
      {
        "options": {
          "challengeMethod": "APP_LINK",
          "href": "okta-verify.html",
          "step": "challenge-poll",
        },
        "type": "OpenOktaVerifyFPButton",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Device Challenge Poll Tests where remediation is challenge-poll should transform elements when challengeMethod is CUSTOM_URI 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "customUri.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "customUri.required.content.prompt",
        },
        "type": "Description",
      },
      {
        "options": {
          "challengeMethod": "CUSTOM_URI",
          "href": "okta-verify.html",
          "step": "challenge-poll",
        },
        "type": "OpenOktaVerifyFPButton",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "customUri.required.content.download.title",
        },
        "type": "Description",
      },
      {
        "options": {
          "href": "https://apps.apple.com/us/app/okta-verify/id490179405",
          "label": "customUri.required.content.download.linkText",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Device Challenge Poll Tests where remediation is challenge-poll should transform elements when challengeMethod is UNIVERSAL_LINK 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "universalLink.title",
        },
        "type": "Title",
      },
      {
        "type": "Spinner",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "universalLink.content",
        },
        "type": "Description",
      },
      {
        "options": {
          "challengeMethod": "UNIVERSAL_LINK",
          "href": "okta-verify.html",
          "step": "challenge-poll",
        },
        "type": "OpenOktaVerifyFPButton",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Device Challenge Poll Tests where remediation is device-challenge-poll should transform elements when challengeMethod is APP_LINK 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "appLink.title",
        },
        "type": "Title",
      },
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "callback": [Function],
                },
                "type": "StepperNavigator",
                "viewIndex": 0,
              },
              {
                "type": "Spinner",
                "viewIndex": 0,
              },
              {
                "contentType": "footer",
                "options": {
                  "label": "oie.verification.switch.authenticator",
                  "onClick": [Function],
                  "step": "select-authenticator-authenticate",
                },
                "type": "Link",
                "viewIndex": 0,
              },
              {
                "contentType": "footer",
                "options": {
                  "actionParams": {
                    "reason": "USER_CANCELED",
                    "statusCode": null,
                  },
                  "isActionStep": true,
                  "label": "goback",
                  "step": "authenticatorChallenge-cancel",
                },
                "type": "Link",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "contentType": "subtitle",
                "options": {
                  "content": "appLink.content",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "challengeMethod": "APP_LINK",
                  "href": "okta-verify.html",
                  "step": "device-challenge-poll",
                },
                "type": "OpenOktaVerifyFPButton",
                "viewIndex": 1,
              },
              {
                "contentType": "footer",
                "options": {
                  "label": "oie.verification.switch.authenticator",
                  "onClick": [Function],
                  "step": "select-authenticator-authenticate",
                },
                "type": "Link",
                "viewIndex": 1,
              },
              {
                "contentType": "footer",
                "options": {
                  "isActionStep": true,
                  "label": "goback",
                  "step": "cancel",
                },
                "type": "Link",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Device Challenge Poll Tests where remediation is device-challenge-poll should transform elements when challengeMethod is CHROME_DTC 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "deviceTrust.sso.redirectText",
        },
        "type": "ActionPending",
      },
      {
        "options": {
          "href": "okta-verify.html",
        },
        "type": "ChromeDtcContainer",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Device Challenge Poll Tests where remediation is device-challenge-poll should transform elements when challengeMethod is CUSTOM_URI 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "customUri.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "customUri.required.content.prompt",
        },
        "type": "Description",
      },
      {
        "options": {
          "challengeMethod": "CUSTOM_URI",
          "href": "okta-verify.html",
          "step": "device-challenge-poll",
        },
        "type": "OpenOktaVerifyFPButton",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "customUri.required.content.download.title",
        },
        "type": "Description",
      },
      {
        "options": {
          "href": "https://apps.apple.com/us/app/okta-verify/id490179405",
          "label": "customUri.required.content.download.linkText",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Device Challenge Poll Tests where remediation is device-challenge-poll should transform elements when challengeMethod is UNIVERSAL_LINK 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "universalLink.title",
        },
        "type": "Title",
      },
      {
        "type": "Spinner",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "universalLink.content",
        },
        "type": "Description",
      },
      {
        "options": {
          "challengeMethod": "UNIVERSAL_LINK",
          "href": "okta-verify.html",
          "step": "device-challenge-poll",
        },
        "type": "OpenOktaVerifyFPButton",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
